# routes/index.js
@@ -1,8 +1,11 @@
 //require the express modlue and the router portion of it.
-const routes = require('express').Router();
+const routes = require("express").Router();
+const { Router } = require("express");
 //get the controller module.
-const controllers = require('../controllers/index');
+const controllers = require("../controllers/index");
 //call the function from the controllers
-routes.get('/', controllers.returnData);
+routes.get("/", controllers.returnData);
+routes.use("/", require("./swagger"));
+routes.use("/contacts", require("./contacts"));
 //export the module
 module.exports = routes;
